combine year specific rasters, start to front end

--- a/tiles/tilestache.cfg
+++ b/tiles/tilestache.cfg
@@ -17,9 +17,15 @@
         "provider": {"name": "mapnik", "mapfile": "vector.xml"},
         "projection": "spherical mercator"
     }, 
-    "race-map-1940":
+    "race-map-final":
     {
         "provider": {"name": "mapnik", "mapfile": "style.xml"},
+        "projection": "spherical mercator",
+        "allowed origin": "*"
+    }, 
+    "race-map-1940":
+    {
+        "provider": {"name": "mapnik", "mapfile": "style-1940.xml"},
         "projection": "spherical mercator"
     }, 
     "race-map-1950":
